# vhss-to-fnn

./: CMakeLists.txt  README.md  test.c
data/: accuracy_results.txt  mnist_labels.txt  model_parameters.txt  predicted_labels.txt
src/: demo.c  demo.h
src/include/: lib-2k-prs.h  lib-mesg.h
src/lib/: lib-2k-prs.c
src/poly_vri/: fri.c  fri.h  vpoly.c  vpoly.h
src/prf/: acef.c  acef.h
src/process/: final.c  linear.c  main.c  original.c
src/tests/: 2k-prs.c
